--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,6 @@
 {
-  "destination": "/dist"
+  "buildCommand": "npm run build",
+  "installCommand": "npm install",
+  "outputDirectory": "dist",
+  "public": true
 }
