--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@types/jest": "29.2.4",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^18.11.10",
+    "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.34",
     "@types/supertest": "^2.0.12",
     "@types/uuid": "^9.0.0",
