--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
     "calarasi",
     "camenca",
     "cantemir",
+    "datetime",
     "donduseni",
     "drochia",
     "dubasari",
@@ -14,6 +15,7 @@
     "Formfields",
     "glodeni",
     "grigoriopol",
+    "sitearea",
     "vulcanesi"
   ]
 }
