--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,8 @@
     "Formfields",
     "glodeni",
     "grigoriopol",
+    "regionlocation",
+    "regionlocationsector",
     "sitearea",
     "vulcanesi"
   ]
