added unseed functionality

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "create:seeder": "node ./scripts/create-seeder",
+    "unseed:seeder": "node ./scripts/module/unseed-seeder",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "dev": "nest build --webpack --webpackPath webpack-hmr.config.js --watch",
