Added auto-generated CRUD to test

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,7 +16,7 @@
     "glodeni",
     "grigoriopol",
     "regionlocation",
-    "regionlocationsector",
+    "regionlocationector",
     "sitearea",
     "vulcanesi"
   ]
