--- a/package.json
+++ b/package.json
@@ -25,21 +25,29 @@
   },
   "dependencies": {
     "@nestjs/apollo": "^10.1.6",
-    "@nestjs/common": "^9.2.1",
+    "@nestjs/common": "^9.3.9",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.2.1",
-    "@nestjs/graphql": "^10.1.6",
+    "@nestjs/graphql": "^10.2.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.2.1",
     "@nestjs/typeorm": "^9.0.1",
+    "@ptc-org/nestjs-query-core": "^2.1.1",
+    "@ptc-org/nestjs-query-graphql": "^2.1.1",
+    "@ptc-org/nestjs-query-mongoose": "^2.1.1",
     "@sodaru/yup-to-json-schema": "^1.1.1",
     "apollo-server-express": "^3.11.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "dataloader": "^2.2.2",
     "dotenv": "^16.0.3",
     "graphql": "^16.6.0",
+    "graphql-subscriptions": "^2.0.0",
     "graphql-tools": "^8.3.12",
-    "mongoose": "^6.7.5",
+    "mongodb": "^5.0.1",
+    "mongoose": "^6.9.2",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "pg": "^8.8.0",
@@ -47,7 +55,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^4.0.0",
     "rxjs": "^7.6.0",
-    "ts-morph": "^17.0.1",
+    "ts-morph": "^15.0.0",
     "typeorm": "^0.3.11",
     "yup": "^0.32.11"
   },
