--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "start": "nest start",
     "dev": "nest build --webpack --webpackPath webpack-hmr.config.js --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "pm2 start ecosystem.config.js --env production --no-daemon",
+    "start:prod": "pm2-runtime start ecosystem.config.js --env production",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
