--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
     "Formfields",
     "glodeni",
     "grigoriopol",
+    "loglevel",
     "regionlocation",
     "regionlocationsector",
     "sitearea",
