--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "version": "0.0.1",
   "description": "",
   "author": "",
-  "private": true,
   "license": "UNLICENSED",
   "scripts": {
     "heroku": "heroku logs --tail -a tripple-nine-server",
     "prebuild": "rimraf dist",
-    "build": "nest build",
+    "build": "lerna run build && nest build",
     "stop": "pm2 stop all",
     "create:seeder": "node ./scripts/create-seeder",
     "unseed:seeder": "node ./scripts/module/unseed-seeder",
@@ -26,6 +25,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@999md-clone/yup-schemas": "^1.0.0",
     "@nestjs/apollo": "^10.1.6",
     "@nestjs/cli": "^9.2.0",
     "@nestjs/common": "^9.2.1",
@@ -39,14 +39,14 @@
     "@nestjs/platform-express": "^9.2.1",
     "@sodaru/yup-to-json-schema": "^1.1.1",
     "apollo-server-express": "^3.11.1",
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "graphql": "^16.6.0",
     "graphql-tools": "^8.3.12",
     "mongoose": "^6.7.5",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0",
     "passport-jwt": "^4.0.1",
-    "bcrypt": "^5.1.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.8.0",
     "pm2": "^5.2.2",
     "pretty-quick": "^3.1.3",
@@ -77,6 +77,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.2",
     "jest": "29.4.3",
+    "lerna": "^6.5.1",
     "prettier": "^2.8.0",
     "run-script-webpack-plugin": "^0.1.1",
     "source-map-support": "^0.5.21",
@@ -113,5 +114,8 @@
   "engines": {
     "node": "18.13.0",
     "npm": "9.5.1"
-  }
+  },
+  "workspaces": [
+    "packages/*"
+  ]
 }
