--- a/package.json
+++ b/package.json
@@ -2,21 +2,18 @@
   "name": "999-md-clone",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "Mihai Cujba, Daniel Raileanu",
   "license": "UNLICENSED",
   "scripts": {
     "heroku": "heroku logs --tail -a tripple-nine-server",
     "prebuild": "rimraf dist",
-    "build": "lerna run build && nest build",
-    "stop": "pm2 stop all",
+    "build": "nest build",
     "create:seeder": "node ./scripts/create-seeder",
     "unseed:seeder": "node ./scripts/module/unseed-seeder",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "dev": "nest build --webpack --webpackPath webpack-hmr.config.js --watch",
+    "start": "export DOTENV_CONFIG_PATH=.env.production && nest start",
+    "dev": "export DOTENV_CONFIG_PATH=.env.development && nest build --webpack --webpackPath webpack-hmr.config.js --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "pm2-runtime start ecosystem.config.js --env production",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -25,7 +22,6 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@999md-clone/yup-schemas": "^1.0.0",
     "@nestjs/apollo": "^10.1.6",
     "@nestjs/cli": "^9.2.0",
     "@nestjs/common": "^9.2.1",
@@ -37,23 +33,21 @@
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.2.1",
-    "@sodaru/yup-to-json-schema": "^1.1.1",
     "apollo-server-express": "^3.11.1",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
+    "dotenv-expand": "^10.0.0",
     "graphql": "^16.6.0",
+    "graphql-fields-list": "^2.2.4",
     "graphql-tools": "^8.3.12",
     "mongoose": "^6.7.5",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.8.0",
-    "pm2": "^5.2.2",
     "pretty-quick": "^3.1.3",
     "reflect-metadata": "^0.1.13",
-    "rimraf": "^4.0.0",
     "rxjs": "^7.6.0",
-    "ts-morph": "^17.0.1",
     "yup": "^1.0.0"
   },
   "devDependencies": {
@@ -70,25 +64,26 @@
     "@types/passport-local": "^1.0.34",
     "@types/supertest": "^2.0.12",
     "@types/uuid": "^9.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.45.0",
-    "@typescript-eslint/parser": "^5.45.0",
-    "eslint": "^8.29.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.2",
     "jest": "29.4.3",
-    "lerna": "^6.5.1",
     "prettier": "^2.8.0",
+    "rimraf": "^4.0.0",
     "run-script-webpack-plugin": "^0.1.1",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.2",
     "ts-jest": "29.0.5",
     "ts-loader": "^9.4.2",
+    "ts-morph": "^17.0.1",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "4.1.2",
     "typescript": "^4.9.3",
     "webpack": "^5.75.0",
     "webpack-node-externals": "^3.0.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   },
   "jest": {
     "moduleFileExtensions": [
@@ -114,8 +109,5 @@
   "engines": {
     "node": "18.13.0",
     "npm": "9.5.1"
-  },
-  "workspaces": [
-    "packages/*"
-  ]
+  }
 }
